...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Activities" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gSR-ok-bB5">
                                            <rect key="frame" x="16" y="0.0" width="343" height="52"/>
                                            <autoresizingMask key="autoresizingMask"/>
...
                                            <rect key="frame" x="16" y="30" width="230" height="16"/>
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="last start / end time" label="last start / end time"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                            <nil key="textColor"/>
...
                                            <rect key="frame" x="254" y="6" width="77" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="total duration for today" label="total duration for today"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
...
                                            <rect key="frame" x="254" y="30" width="77" height="16"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="most recent duration" label="most recent duration"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                            <nil key="textColor"/>
...
                                            <rect key="frame" x="74" y="8" width="285" height="30"/>
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="activity name" label="activity name"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits"/>
...
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                            <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                            <accessibility key="accessibilityConfiguration" identifier="activity description" label="activity description"/>
                                            <color key="textColor" systemColor="labelColor"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Activity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="q5x-ls-NiE">
                                            <rect key="frame" x="16" y="12" width="56.5" height="20.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Start" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="OUT-2M-SSV">
                                            <rect key="frame" x="16" y="12" width="37.5" height="20.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="End" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d8c-pP-hHr">
                                            <rect key="frame" x="20" y="12" width="30" height="22"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" heightSizable="YES"/>
...
                                            <rect key="frame" x="88" y="12" width="266" height="22"/>
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="end date" label="end date"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
...
                                            <rect key="frame" x="58" y="11" width="22" height="24"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" heightSizable="YES"/>
                                            <accessibility key="accessibilityConfiguration" hint="This will remove the end date from this instance of the activity." identifier="clear end date button" label="clear end date button"/>
                                            <state key="normal" title="x"/>
                                            <connections>
...
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                            <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                            <accessibility key="accessibilityConfiguration" identifier="activity note" label="activity note"/>
                                            <color key="textColor" systemColor="labelColor"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <color key="backgroundColor" systemColor="labelColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="save dose button" label="save dose button"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" systemColor="systemBackgroundColor"/>
                                </state>
...
