...
		)
		let sortButton = barButton(title: "⇅", action: #selector(sortButtonPressed))
		navigationItem.rightBarButtonItems = [addButton, stopAllButton, sortButton]

		searchController.searchResultsUpdater = self
		searchController.obscuresBackgroundDuringPresentation = false
		searchController.searchBar.placeholder = "Search Activities"
		searchController.hidesNavigationBarDuringPresentation = false
		navigationItem.searchController = searchController
		navigationItem.hidesSearchBarWhenScrolling = false
		definesPresentationContext = true

		loadActivitiyDefinitions()
...
		return action
	}

	private final func getDeleteActivityActionFor(_ activity: Activity) -> UIContextualAction {
		let deleteAction = injected(UiUtil.self).contextualAction(
			style: .destructive,
			title: "🗑️ Last"
		) { _, _, completion in
			let timeText = self.getTimeTextFor(activity)
			let alert = UIAlertController(
				title: "Are you sure you want to delete '\(activity.definition.name)'?",
				message: "This will only delete the most recent instance \(timeText).",
				preferredStyle: .alert
			)
			alert.addAction(UIAlertAction(title: "Yes", style: .destructive) { _ in
				do {
					let transaction = injected(Database.self).transaction()
					try transaction.delete(activity)
					try retryOnFail({ try transaction.commit() }, maxRetries: 2)
					self.loadActivitiyDefinitions()
				} catch {
...
		return deleteAction
	}

	private final func getEditLastActionFor(_ activity: Activity) -> UIContextualAction {
		let editLast = injected(UiUtil.self).contextualAction(
			style: .normal,
			title: "✎ Last"
		) { _, _, completion in
			completion(true)
			self.showEditScreenForActivity(activity)
		}
		editLast.backgroundColor = .orange
		return editLast
...
	private final func getDeleteActivityDefinitionActionFor(
		_ activityDefinition: ActivityDefinition,
		at _: IndexPath
	) -> UIContextualAction {
		injected(UiUtil.self).contextualAction(
			style: .destructive,
			title: "🗑️ All"
		) { _, _, completion in
			let alert = UIAlertController(
				title: "Are you sure you want to delete \(activityDefinition.name)?",
				message: "This will delete all history for this activity and cannot be undone.",
				preferredStyle: .alert
			)
...
						self.loadActivitiyDefinitions()
					} catch {
						Me.log.error("Failed to delete activity definition: %@", errorInfo(error))
						self.showError(title: "Failed to delete activity", error: error)
					}
				})
				secondAlert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: nil))
			})
			alert.addAction(UIAlertAction(title: "No", style: .cancel, handler: nil))
			self.present(alert, animated: false, completion: { completion(true) })
		}
	}

	private final func getEditActivityDefinitionActionFor(
		_ activityDefinition: ActivityDefinition,
		at indexPath: IndexPath
	) -> UIContextualAction {
		let editDefinitionAction = injected(UiUtil.self).contextualAction(
			style: .normal,
			title: "✎ All"
		) { _, _, completion in
			self.definitionEditIndex = indexPath
			let controller: EditActivityDefinitionTableViewController = self
				.viewController(named: "editActivityDefinition")
			controller.activityDefinition = activityDefinition
			controller.notificationToSendOnAccept = Me.activityDefinitionEdited
...
