...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Settings-->
        <scene sceneID="msT-sk-aop">
            <objects>
                <tableViewController title="Settings" id="fZJ-11-bhE" customClass="SettingsTableViewController" customModule="Introspective" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="6Xo-EX-SdH">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="574"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="general" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="general" textLabel="ykT-jw-7Pc" style="IBUITableViewCellStyleDefault" id="OmA-AA-bYA">
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aLa-2i-9Rs">
                                            <rect key="frame" x="16" y="6" width="343" height="30"/>
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                            <color key="backgroundColor" systemColor="labelColor"/>
                                            <accessibility key="accessibilityConfiguration" identifier="delete core data button"/>
                                            <state key="normal" title="Delete All CoreData">
                                                <color key="titleColor" systemColor="systemBackgroundColor"/>
                                            </state>
                                            <connections>
                                                <action selector="deleteCoreDataButtonPressed" destination="mLT-5o-4PP" eventType="touchUpInside" id="4D1-Up-yFK"/>
                                            </connections>
...
